--- a/sass/components/_recipe-card.scss
+++ b/sass/components/_recipe-card.scss
@@ -5,7 +5,7 @@
   border-radius: 21px;
   position: relative;
   box-shadow: 0px 4px 34px 30px #0000000a;
-
+  display: block;
   &__time {
     position: absolute;
     top: 24px;
